@@ -11,6 +11,7 @@ Christian Dax
 Christopher Ziegler
 Clément Tamines
 David Müller
+Edmond Irani Liu
 Ernesto Posse
 Étienne Renault
 Fabrice Kordon
