@@ -23,6 +23,7 @@
 #include <spot/misc/bddlt.hh>
 #include <spot/misc/timer.hh>
 #include <spot/twa/bddprint.hh>
+#include <spot/kripke/kripkegraph.hh>
 #include <spot/misc/escape.hh>
 #include <spot/priv/robin_hood.hh>
 #include <vector>
@@ -1600,6 +1601,17 @@ namespace spot
           return p.first->second;
         };
 
+      // If the input is a kripke_graph and the number of states is
+      // not restricted, predeclare all states to keep their
+      // numbering, and also copy unreachable states.
+      if (max_states == -1U)
+        if (auto kg = std::dynamic_pointer_cast<const kripke_graph>(aut))
+          {
+            unsigned ns = kg->num_states();
+            for (unsigned s = 0; s < ns; ++s)
+              new_state(kg->state_from_number(s));
+          }
+
       out->set_init_state(new_state(aut->get_init_state()));
       while (!todo.empty())
         {
@@ -1637,7 +1649,6 @@ namespace spot
                 }
             }
         }
-
 
       auto s = seen.begin();
       while (s != seen.end())
